--- a/suporte.juan/suporte.css/sup.css
+++ b/suporte.juan/suporte.css/sup.css
@@ -1,5 +1,3 @@
-
-
 body{    background: linear-gradient(90deg, rgba(15,12,41,1) 0%, rgba(48,43,99,1) 35%, rgba(36,36,62,1) 100%);
     width: 100%;
     height: 100%;
@@ -21,7 +19,9 @@ textarea{
     
 }
 .card{   /* aqui esta pesonalizando onde as pessoas possam escrever no seu formulário */
-   
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     box-shadow: 5px 20px 50px #000;
     border-radius: 8px;
     width: 700px;
@@ -37,37 +37,27 @@ textarea{
     flex-wrap: wrap;
     padding: 32px;
 }
- input,
- textarea{  /*Estamos dando uma aparência específica para as caixas de texto e áreas onde as pessoas podem escrever dentro do nosso formulário.*/
+ 
+ textarea{
     width: calc(50% - 8px);
-    height: 48px;
+    height: 4000px;
     border-radius: 8px;
     border: thin solid #0a0000;
     padding-left: 16px;  
     margin-bottom: 16px;
     font-size: 16px;
 }
+h2{
+    color: #fff;
+}
 
-input[name=subject]{ /*este codigo serve para regular a largura do formulario de comentario */
-    width: 100%;
-    border-radius:20px;
-}
-input[name=email]{ /*este codigo serve para regular a largura do formulario de comentario */
-    width: 100%;
-    border-radius:20px;
-}
-input[name=name]{ /*este codigo serve para regular a largura do formulario de comentario */
-    width: 100%;
-    border-radius:20px;
-}
 textarea{ /*serve para regular a altura do formulario de comentario */
-    width: 100%;
-    height: 180px;
+    width: 589px;
+    height: 222px;
     padding: 16px;
 }
  button{
-    margin-left: 32%;
-    display: block;
+    margin-left: 33%;
     border: none;
     outline: none;
     width: 180px;
@@ -78,7 +68,8 @@ textarea{ /*serve para regular a altura do formulario de comentario */
     font-size: 16px;
     font-weight: bold;
     cursor: pointer;
-    transition: .2s ease-in;
+    margin-top: 20px;
+     
     
 }
 button:hover{
@@ -86,102 +77,14 @@ button:hover{
 } 
 
 
-h2{
-    margin-left:38%;
-    color: #fff ;
-}
-.RAeMail{
-   display: flex;
-
-}
-a{
-
-    margin-left: 43%;
-color: beige;
-text-decoration: none;
-
-}
-
-#modal2 {
-    border-radius: 20px;
-    border: solid 2px #dbd6d6;
-    width: 15%;
-    height: 10%;
-}
-
-
-.okButton{
-
-  background-color: #573b8a  ;
-  color: #FFFFFF;
-  width: 10px;
-  height: 43px;
  
-  border-radius: 50px ;
-  cursor: pointer;
- transition-duration: 0.4s; 
-  transition-duration: 0.4s;
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-}
-#ops{
-    margin-left: 70px;
-}
-.okButton:hover{
-  width: 100px;
-  height: 43px;
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
-}
-#modal{
-    border-radius: 20px;
-    border: solid 2px #dbd6d6;
-    width: 390px;
-    height: 400px;}
-
-    .circulo{
-  
-        width: 115px;
-        height: 115px;
-        border: solid 10px #D82A2A;
-        border-radius: 50%;
-        display: flex;
-        justify-content: center;
-        margin-top: 30px;
-        margin-left: 31%;
-        align-items: center;
-      }
-    .x{
-  
-        height: 60px;
-      
-      }
-
-#ops1{
-    margin-left: 50px;
-margin-top: 100px;
-height:none;
-width: none;
-
-}
-.okButton1{
-
-
-    background-color: #3d00adcb  ;
-    color: #FFFFFF;
-    width: 100px;
-    height: 43px;
-   
-    border-radius: 50px ;
-    cursor: pointer;
-   transition-duration: 0.4s; 
-    transition-duration: 0.4s;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19); 
-  }
-
-
   a{
 
-    margin-top: 15px;
-
+    margin-top: 40px;
+    margin-left: 44%;
+    color: beige;
+    text-decoration: none;
+    
  }
 
 @media (min-width:340px) and (max-width:500px){
@@ -203,7 +106,3 @@ textarea{
  
 
 }
- 
-
-
-
